istio/paysafe-backend-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: paysafe-backend
  namespace: paysafe
spec:
  host: paysafe-backend
  subsets:
  - name: stable
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
