istio/paysafe-backend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: paysafe-backend
  namespace: paysafe
spec:
  hosts:
  - paysafe.local
  gateways:
  - paysafe-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    rewrite:
      uri: /
    route:
    - destination:
        host: paysafe-backend
        port:
          number: 5000
